--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-/build
-/nbproject
+**/nbproject/private/
+**/nbproject/Makefile-*.mk
+**/nbproject/Package-*.bash
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
